# proy_robotanica

./: README.md
proy_robotanica/: CMakeLists.txt  package.xml
proy_robotanica_capture_image/: package.xml  setup.cfg  setup.py
proy_robotanica_capture_image/launch/: capturar_imagen_launch.launch.py
proy_robotanica_capture_image/proy_robotanica_capture_image/: capturar.py
proy_robotanica_custom_interface/: CMakeLists.txt  package.xml
proy_robotanica_custom_interface/action/: Move.action
proy_robotanica_custom_interface/msg/: Circle.msg  Distvel.msg
proy_robotanica_custom_interface/srv/: MyCameraMsg.srv  MyMoveMsg.srv  TypeOfPlant.srv  Waypoints.srv
proy_robotanica_my_slam/: package.xml  setup.cfg  setup.py
proy_robotanica_my_world/: CMakeLists.txt  package.xml
proy_robotanica_nav_punto/: package.xml  setup.cfg  setup.py
proy_robotanica_nav_punto/config/: my_map.pgm  my_map.yaml  nav2_default_view_new.rviz  project_params.yaml  warehouse.pgm  warehouse.yaml
proy_robotanica_nav_punto/launch/: my_tb3_sim_nav2.launch.py  tb3_real_nav2_system.launch.py
proy_robotanica_nav_punto/proy_robotanica_nav_punto/: initial_pose_pub.py  nav_through_waypoints.py  nav_to_pose.py  nav_waypoints.py
proy_robotanica_services/: package.xml  setup.cfg  setup.py
proy_robotanica_tomates/: test_tomates.py  tomates.py
proy_robotanica_world/: CMakeLists.txt  package.xml
proy_robotanica_ws_ros_web/: package-lock.json
reconocimiento/: confusion.py  descargar_imagenes.py  elegir_testeo.py  quitar_repetidos.py  reconocimiento.py  test.py
ws_ros_web/: package.json
(+80 files in other folders)
